--- a/mobile_version_check/views/setting_config_view.xml
+++ b/mobile_version_check/views/setting_config_view.xml
@@ -7,8 +7,8 @@
             <field name="priority" eval="40"/>
             <field name="inherit_id" ref="base.res_config_settings_view_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//div[hasclass('settings')]" position="inside">
-                    <div class="app_settings_block" data-string="Mobile App Package Name" string="Mobile App Package Name" data-key="mobile_version_check">
+                <xpath expr="//form" position="inside">
+                    <app data-string="Mobile App Package Name" string="Mobile App Package Name" name="mobile_version_check">
                         <h2>Mobile App Package Name</h2>
                         <div class="row mt16 o_settings_container" name="default_platform_settings_container">
                             <div class="col-12 col-lg-6 o_setting_box" title="The accounts setup will be used for pos session closed.">
@@ -37,7 +37,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </app>
                 </xpath>
             </field>
         </record>
